force-app/main/default/objects/Note__c/Note__c.object-meta.xml
<CustomObject>
    <label>Note</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>