force-app/main/default/objects/Note__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>