force-app/main/default/objects/Note__c/fields/Important__c.field-meta.xml
<CustomField>
    <fullName>Important__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the note is important, it will be highlighted somehow</description>
    <label>Important</label>
    <type>Checkbox</type>
</CustomField>