force-app/main/default/objects/Note__c/fields/Picture_Url__c.field-meta.xml
<CustomField>
    <fullName>Picture_Url__c</fullName>
    <label>Picture Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>