force-app/main/default/objects/Note__c/fields/Youtube_Url__c.field-meta.xml
<CustomField>
    <fullName>Youtube_Url__c</fullName>
    <label>Youtube Url</label>
    <length>100</length>
    <type>Text</type>
</CustomField>