force-app/main/default/objects/Note__c/fields/YT_Thumb_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>YT_Thumb_Image_Url__c</fullName>
    <label>YT Thumb Image Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>